--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header_right">
             <p class="header_right_p1">Introducing a new film on our site</p>
             <p class="header_right_p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisl nulla, pellentesque ut ornare ut, vulputate in dui. Fusce placerat elit lacus, ut iaculis dolor sollicitudin at. Sed imperdiet auctor tortor, eu venenatis odio consequat mollis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisl nulla, pellentesque ut ornare ut, vulputate in dui. Fusce placerat elit lacus, ut iaculis dolor sollicitudin at. Sed imperdiet auctor tortor, eu venenatis odio consequat mollis. </p>
-            <button class="header_right_btn">Purchase</button>
+            <button class="header_right_btn btn">Purchase</button>
         </div>
         <header class="header_menu">
             <img class="header_menu_img1" src="./imges/logo.svg" alt="">
@@ -33,5 +33,6 @@
         </header>
         <div class="header_gradient"></div>
     </header>
+    <script src="./main.js"></script>
 </body>
 </html>
