--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <a class="header_menu_nav_a" href="#">New</a>
                 <a class="header_menu_nav_a" href="#">Schedule</a>
                 <a class="header_menu_nav_a" href="#">Cinema</a>
+                <img class="justmenu" src="./imges/menu.png" alt="">
             </nav>
             <img class="header_menu_img2" src="./imges/user.svg" alt="">
         </header>
