--- a/purchase.html
+++ b/purchase.html
@@ -21,6 +21,7 @@
             <a class="header_menu_nav_a" href="#">New</a>
             <a class="header_menu_nav_a" href="#">Schedule</a>
             <a class="header_menu_nav_a" href="#">Cinema</a>
+            <img class="justmenu" src="./imges/menu.png" alt="">
         </nav>
         <img class="header_menu_img2" src="./imges/user.svg" alt="">
     </header>
@@ -67,8 +68,39 @@
                 </div>
             </div>
             <div class="line"></div>
+            <div class="blockadd_block_under">
+                <img class="blockadd_block_under_img1" src="./imges/de.png" alt="">
+                <div class="blockadd_block_under_right">
+                    <img class="blockadd_block_under_right_img1" src="./imges/master.JPG" alt="">
+                    <p class="blockadd_block_under_right_p1">Paying</p>
+                    <div class="blockadd_block_under_right_down">
+                        <div class="blockadd_block_under_right_down_pn1">
+                            <p class="blockadd_block_under_right_down_pn1_p1">card number</p>
+                            <input class="blockadd_block_under_right_down_pn1_input" type="text" placeholder="">
+                        </div>
+                        <div class="blockadd_block_under_right_down_pn2">
+                            <div class="blockadd_block_under_right_down_pn2_yyyy">
+                                <p class="blockadd_block_under_right_down_pn2_yyyy_p1">mm/yyyy</p>
+                                <input class="blockadd_block_under_right_down_pn2_yyyy_input" type="text">
+                            </div>
+                            <div class="blockadd_block_under_right_down_pn2_cvc">
+                                <p class="blockadd_block_under_right_down_pn2_yyyy_p1">cvc</p>
+                                <input class="blockadd_block_under_right_down_pn2_cvc_input" type="text">
+                            </div>
+                        </div>
+                        <div class="blockadd_block_under_right_down_pn3">
+                            <div class="blockadd_block_under_right_down_pn3_left">
+                                <div class="blockadd_block_under_right_down_pn3_left_icon"></div>
+                                <p class="blockadd_block_under_right_down_pn3_left_p1">I agree with the license offer and take care of everything</p>
+                            </div>
+                            <div class="blockadd_block_under_right_down_pn3_btn">Pay</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
     <footer class="footer"></footer>
     <script src="./main.js"></script>
 </body>
